<resources>

    <!--Main screen-->
    <string name="app_name">Loja Virtual</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="popular">Populares</string>
    <string name="recent">Recentes</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="product_title">Título do Produto</string>
    <string name="product_price">R$ 89,90</string>
    <string name="bt_buy_product_detail">COMPRAR</string>
    <string name="title_description">Descrição</string>
    <string name="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="product_detail_cor">Cor</string>
    <string name="product_detail_tamanho">Tamanho</string>

    <!--Menu Drawer-->
    <string name="home">Página Inicial</string>
    <string name="category">Categoria</string>
    <string name="my_orders">Meus Pedidos</string>
    <string name="my_cart">Meu Carrinho</string>
    <string name="toogle_open">Open</string>
    <string name="toogle_close">Close</string>
</resources>