<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:src="@drawable/a1"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/tv_product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/bt_product_detail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/bt_buy_product_detail"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_title_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </LinearLayout>
</ScrollView>